add public links to AWS images in matches view

--- a/app/views/users/matches.html.erb
+++ b/app/views/users/matches.html.erb
@@ -40,7 +40,7 @@
   <% @matches_10miles_uniq.each do |match| %>
     <div class="col-md-3 match">
       <div class="thumbnail">
-        <%= image_tag(match.avatar_url, class: 'thumbnail') %>
+        <%= image_tag("http://s3.amazonaws.com/mlouiepromatch/#{match.first_name}.jpg", class: 'thumbnail') %>
         <div class="caption">
           <h4><%=link_to match.full_name, user_path(match) %></h4>
           <% if match.ability == '2.0 - New to tennis' %>
@@ -72,7 +72,7 @@
   <% @matches_ability.each do |match| %>
     <div class="col-md-3 match">
       <div class="thumbnail">
-        <%= image_tag(match.avatar_url, class: 'thumbnail') %>
+        <%= image_tag("http://s3.amazonaws.com/mlouiepromatch/#{match.first_name}.jpg", class: 'thumbnail') %>
         <div class="caption">
           <h4><%=link_to match.full_name, user_path(match) %></h4>
           <% if match.ability == '2.0 - New to tennis' %>
