--- a/app/views/welcome/map.html.erb
+++ b/app/views/welcome/map.html.erb
@@ -5,8 +5,6 @@
   var markers = [];
 
   function initialize() {
-
-
     var mapOptions = {
       zoom: 13,
       center: new google.maps.LatLng(39.72, -104.99),
@@ -16,15 +14,15 @@
         mapOptions);
 
     // Create marker for each user
-        <% @users.each do |user| %>
-            var marker = new google.maps.Marker({
-              position: new google.maps.LatLng(<%= user.latitude %>, <%= user.longitude %>),
-              map: map
-            });
-            marker.id = <%= user.id %>
-            marker.setMap(map);
-            markers.push(marker);
-        <% end %>
+    <% @users.each do |user| %>
+        var marker = new google.maps.Marker({
+          position: new google.maps.LatLng(<%= user.latitude %>, <%= user.longitude %>),
+          map: map
+        });
+        marker.id = <%= user.id %>
+        marker.setMap(map);
+        markers.push(marker);
+    <% end %>
 
     // Create the search box and link it to the UI element.
     var input = /** @type {HTMLInputElement} */(
@@ -120,7 +118,25 @@
       map: map,
       icon: 'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
     });
-    console.log('HI');
+  }
+
+  function resetMap() {
+    var mapOptions = {
+      zoom: 13,
+      center: new google.maps.LatLng(39.72, -104.99),
+      disableDefaultUI: true
+    }
+    var map = new google.maps.Map(document.getElementById("map-canvas-page"),
+        mapOptions);
+    <% @users.each do |user| %>
+        var marker = new google.maps.Marker({
+          position: new google.maps.LatLng(<%= user.latitude %>, <%= user.longitude %>),
+          map: map
+        });
+        marker.id = <%= user.id %>
+        marker.setMap(map);
+        markers.push(marker);
+    <% end %>
   }
 
   google.maps.event.addDomListener(window, 'load', initialize);
@@ -130,7 +146,7 @@
     <input id="pac-input" class="controls" type="text" placeholder="Find players in your area...">
     <br><br>
     <% @users.each do |user| %>
-      <div id="<%= user.id %>" class="user" onmouseover="changeMarker(<%= user.latitude %>, <%= user.longitude %>)">
+      <div id="<%= user.id %>" class="user" onmouseover="changeMarker(<%= user.latitude %>, <%= user.longitude %>)" onmouseout="resetMap()">
         <%= link_to(user.full_name, user_path(user)) %><br>
         <%= user.address %><br>
         <%= user.email %><br><br>
