--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <div class="page-header">
   <h1><%= "#{@user.first_name} #{@user.last_name}" %></h1>
+  <p><%= link_to 'Edit Profile', edit_user_path(@user) %></p>
 </div>
 <div class="col-md-4">
   <%= image_tag(@user.avatar_url, class: 'img-responsive', id: 'avatar') %>
@@ -39,5 +40,6 @@
       <% end %>
     </tbody>
   </table>
+
 
 </div>
