--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <div class="page-header">
   <h1><%= "#{@user.first_name} #{@user.last_name}" %></h1>
-  <p><%= link_to 'Edit Profile', edit_user_path(@user) %></p>
+  <% if current_user.id == @user.id %>
+    <p><%= link_to 'Edit Profile', edit_user_path(@user) %> | <%= link_to 'Delete',  user_path(@user), method: :delete %></p>
+  <% end %>
 </div>
 <div class="col-md-4">
   <%= image_tag(@user.avatar_url, class: 'img-responsive', id: 'avatar') %>
