change text on carousel and add text to message append

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
      <div class="item active">
       <%= image_tag("ball.jpg", class: 'layer') %>
        <div class="carousel-caption">
-           <h2>Find local tennis partners</h2>
+           <h2>Find Your Tennis Community</h2>
        </div>
      </div>
      <div class="item">
