remove contact from footer

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,8 +31,8 @@
 
 <div class="col-md-12 about clearfix">
   <hr>
-  <h2>ProMatch is where you can find your tennis community.</h2>
-  <p class="lead">Let us match you with players in your area and at your level.</p>
+  <h2>ProMatch is where you can find your tennis community</h2>
+  <p class="lead">Let us match you with players in your area and at your level</p>
 </div>
 <div class="row clearfix features">
   <div class="col-md-3 feature" id="sign_up">
