--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 </div>
 <div class="col-md-4">
-  <%= image_tag(@user.avatar_url, class: 'img-responsive', id: 'avatar') %>
+  <%= image_tag"http://s3.amazonaws.com/mlouiepromatch/#{@user.first_name}.jpg", class: 'img-responsive', id: 'avatar') %>
 </div>
 <div class="member-info col-md-8">
   <table class="table table-striped">
